Frequency indicator, performance improvements
 - added frequency indicator to each key
 - added return statements to KeyDwn
 - added array apaksina, for checking which keys are in the lower section (simplifies conditions)

--- a/tasiraklav.css
+++ b/tasiraklav.css
@@ -68,6 +68,19 @@ p {
     padding: 0px;
 }
 
+.augsina > div, .apaksina > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.freq-indicator {
+    font-size: 12px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
 .apaksina {
     width: 600px;
     display: grid;
