--- a/tasiraklav.css
+++ b/tasiraklav.css
@@ -1,7 +1,8 @@
 body {
     font-size: 24px;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    min-height: 950px;
     background-color: antiquewhite;
 }
 
@@ -10,9 +11,23 @@ h1 {
     font-size: 36px;
 }
 
+h2 {
+    padding-bottom: 1em;
+}
+
 p {
     padding-top: 1em;
     padding-bottom: 1em;
+}
+
+ul {
+    list-style-type: square;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+li {
+    margin: 0.25em 0 0.25em 0;
 }
 
 .content-container {
@@ -43,6 +58,7 @@ p {
 .klaviatura-flex-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .controls-container {
@@ -132,7 +148,3 @@ footer {
     border-top: black solid 1px;
     background-color: whitesmoke;
 }
-
-
-
-
