--- a/tasiraklav.css
+++ b/tasiraklav.css
@@ -3,31 +3,16 @@ body {
     width: 100%;
     height: 100vh;
     min-height: 1300px;
+    min-width: 830px;
     background-color: antiquewhite;
 }
 
-h1 {
-    padding-top: 1em;
-    font-size: 36px;
-}
-
-h2 {
-    padding-bottom: 1em;
-}
-
-p {
-    padding-top: 1em;
-    padding-bottom: 1em;
+.container-sm {
+    min-width: 830px;
 }
 
 ul {
     list-style-type: square;
-    font-size: 20px;
-    margin-left: 20px;
-}
-
-li {
-    margin: 0.25em 0 0.25em 0;
 }
 
 .klaviatura-container {
@@ -129,6 +114,10 @@ li {
 #k2, #k4, #k7, #k9, #k11, #k14, #k16{
     color: white;
     background-color: black;
+}
+
+#pills-tab, .tab-content {
+    font-size: 18px;
 }
 
 footer {
